--- a/src/components/blogitems/styles.sass
+++ b/src/components/blogitems/styles.sass
@@ -8,6 +8,9 @@
         justify-content: space-between
         column-gap: 50px
         width: 100%
+        @media screen and (max-width: 876px)
+            flex-direction: column-reverse
+            row-gap: 50px
         .blogItemsContainer
             width: 100%
             display: flex
@@ -21,9 +24,14 @@
                     display: flex
                     width: 100%
                     column-gap: 20px
+                    @media screen and (max-width: 1100px)
+                        flex-direction: column
+                        row-gap: 20px
                     .contentImage
                         max-width: 400px
                         width: 100%
+                        @media screen and (max-width: 1100px)
+                            max-width: 100%
                         .img
                             width: 100%
                     .content
@@ -31,27 +39,43 @@
                         display: flex
                         flex-direction: column
                         justify-content: space-between
+                        @media screen and (max-width: 1100px)
+                            row-gap: 10px
                         .contentTitle
                             .title
                                 +typography(24px, 500, map-get($basic, 'white'))
+                                @media screen and (max-width: 1100px)
+                                    font-size: 20px
                         .contentText
                             max-width: 600px
                             width: 100%
                             .text
                                 line-height: 1.5
                                 +typography(18px, 400, map-get($basic, 'white'))
+                                @media screen and (max-width: 1100px)
+                                    font-size: 16px
                         .contactTag
                             .tag
                                 +typography(24px, 500, map-get($basic, 'white'))
+                                @media screen and (max-width: 1100px)
+                                    font-size: 20px
                 .blogInfo
                     display: flex
                     justify-content: space-between
+                    @media screen and (max-width: 640px)
+                        flex-direction: column
+                        row-gap: 16px
+                        align-items: flex-start
                     .info
                         display: flex
                         align-content: center
                         justify-content: center
                         column-gap: 20px
                         margin-top: 16px
+                        @media screen and (max-width: 550px)
+                            flex-direction: column
+                            align-items: flex-start
+                            row-gap: 16px
                         .writer
                             display: flex
                             align-items: center
@@ -68,6 +92,8 @@
                             .writerName
                                 .name
                                     +typography(18px, 500, map-get($basic, 'white'))
+                                    @media screen and (max-width: 1100px)
+                                        font-size: 16px
                         .infoDate
                             display: flex
                             align-items: center
@@ -76,6 +102,8 @@
                             .infoDateText,
                             .time
                                 +typography(18px, 500, map-get($basic, 'white'))
+                                @media screen and (max-width: 1100px)
+                                    font-size: 16px
                     .link
                         padding: 10px 20px
                         background: map-get($main, 'main')
@@ -86,9 +114,17 @@
                         border-radius: 6px
                         transition: all 0.5s ease
                         text-decoration: none
+                        @media screen and (max-width: 640px)
+                            width: 100%
                         .linkSeeMore
                             +typography(18px, 400, map-get($basic, 'white'))
+                            @media screen and (max-width: 1100px)
+                                font-size: 16px
                         &:hover
                             background: transparent
         .blogFilter
             width: 20%
+            @media screen and (max-width: 876px)
+                width: 100%
+                flex-direction: column
+                justify-content: space-between
